--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
             <h1 class="home-text">ALEXANDRA MERBECKS</h1>
             <div data-thq="thq-navbar-nav" class="home-desktop-menu">
               <nav class="home-links">
-                <span>About</span>
-                <span class="home-text02">Features</span>
-                <span class="home-text03">Pricing</span>
-                <span class="home-text04">Team</span>
-                <span class="home-text05">Blog</span>
+                <a href="#about" class="home-link">About</a>
+                <a href="#teaching" class="home-link01">Teaching</a>
+                <a href="#contact" class="home-link02">Contact</a>
+                <a href="#gallery" class="home-link03">Gallery</a>
               </nav>
             </div>
             <div data-thq="thq-burger-menu" class="home-burger-menu">
@@ -72,11 +71,7 @@
             <div data-thq="thq-mobile-menu" class="home-mobile-menu">
               <div class="home-nav">
                 <div class="home-top">
-                  <img
-                    alt="image"
-                    src="https://presentation-website-assets.teleporthq.io/logos/logo.png"
-                    class="home-logo"
-                  />
+                  <h1 class="home-text01">ALEXANDRA MERBECKS</h1>
                   <div data-thq="thq-close-menu" class="home-close-menu">
                     <svg viewBox="0 0 1024 1024" class="home-icon02">
                       <path
@@ -85,40 +80,22 @@
                     </svg>
                   </div>
                 </div>
+                <span class="home-text02">VIOLINIST</span>
                 <nav class="home-links1">
-                  <span class="home-text06">About</span>
-                  <span class="home-text07">Features</span>
-                  <span class="home-text08">Pricing</span>
-                  <span class="home-text09">Team</span>
-                  <span class="home-text10">Blog</span>
+                  <a href="#about" class="home-link04">About</a>
+                  <a href="#teaching" class="home-link05">TEACHING</a>
+                  <a href="#contact" class="home-link06">CONTACT</a>
+                  <a href="#gallery" class="home-link07">GaLLERY</a>
                 </nav>
-                <div class="home-buttons">
-                  <button class="home-login button">Login</button>
-                  <button class="button">Register</button>
-                </div>
-              </div>
-              <div>
-                <svg viewBox="0 0 950.8571428571428 1024" class="home-icon04">
-                  <path
-                    d="M925.714 233.143c-25.143 36.571-56.571 69.143-92.571 95.429 0.571 8 0.571 16 0.571 24 0 244-185.714 525.143-525.143 525.143-104.571 0-201.714-30.286-283.429-82.857 14.857 1.714 29.143 2.286 44.571 2.286 86.286 0 165.714-29.143 229.143-78.857-81.143-1.714-149.143-54.857-172.571-128 11.429 1.714 22.857 2.857 34.857 2.857 16.571 0 33.143-2.286 48.571-6.286-84.571-17.143-148-91.429-148-181.143v-2.286c24.571 13.714 53.143 22.286 83.429 23.429-49.714-33.143-82.286-89.714-82.286-153.714 0-34.286 9.143-65.714 25.143-93.143 90.857 112 227.429 185.143 380.571 193.143-2.857-13.714-4.571-28-4.571-42.286 0-101.714 82.286-184.571 184.571-184.571 53.143 0 101.143 22.286 134.857 58.286 41.714-8 81.714-23.429 117.143-44.571-13.714 42.857-42.857 78.857-81.143 101.714 37.143-4 73.143-14.286 106.286-28.571z"
-                  ></path></svg
-                ><svg viewBox="0 0 877.7142857142857 1024" class="home-icon06">
-                  <path
-                    d="M585.143 512c0-80.571-65.714-146.286-146.286-146.286s-146.286 65.714-146.286 146.286 65.714 146.286 146.286 146.286 146.286-65.714 146.286-146.286zM664 512c0 124.571-100.571 225.143-225.143 225.143s-225.143-100.571-225.143-225.143 100.571-225.143 225.143-225.143 225.143 100.571 225.143 225.143zM725.714 277.714c0 29.143-23.429 52.571-52.571 52.571s-52.571-23.429-52.571-52.571 23.429-52.571 52.571-52.571 52.571 23.429 52.571 52.571zM438.857 152c-64 0-201.143-5.143-258.857 17.714-20 8-34.857 17.714-50.286 33.143s-25.143 30.286-33.143 50.286c-22.857 57.714-17.714 194.857-17.714 258.857s-5.143 201.143 17.714 258.857c8 20 17.714 34.857 33.143 50.286s30.286 25.143 50.286 33.143c57.714 22.857 194.857 17.714 258.857 17.714s201.143 5.143 258.857-17.714c20-8 34.857-17.714 50.286-33.143s25.143-30.286 33.143-50.286c22.857-57.714 17.714-194.857 17.714-258.857s5.143-201.143-17.714-258.857c-8-20-17.714-34.857-33.143-50.286s-30.286-25.143-50.286-33.143c-57.714-22.857-194.857-17.714-258.857-17.714zM877.714 512c0 60.571 0.571 120.571-2.857 181.143-3.429 70.286-19.429 132.571-70.857 184s-113.714 67.429-184 70.857c-60.571 3.429-120.571 2.857-181.143 2.857s-120.571 0.571-181.143-2.857c-70.286-3.429-132.571-19.429-184-70.857s-67.429-113.714-70.857-184c-3.429-60.571-2.857-120.571-2.857-181.143s-0.571-120.571 2.857-181.143c3.429-70.286 19.429-132.571 70.857-184s113.714-67.429 184-70.857c60.571-3.429 120.571-2.857 181.143-2.857s120.571-0.571 181.143 2.857c70.286 3.429 132.571 19.429 184 70.857s67.429 113.714 70.857 184c3.429 60.571 2.857 120.571 2.857 181.143z"
-                  ></path></svg
-                ><svg viewBox="0 0 602.2582857142856 1024" class="home-icon08">
-                  <path
-                    d="M548 6.857v150.857h-89.714c-70.286 0-83.429 33.714-83.429 82.286v108h167.429l-22.286 169.143h-145.143v433.714h-174.857v-433.714h-145.714v-169.143h145.714v-124.571c0-144.571 88.571-223.429 217.714-223.429 61.714 0 114.857 4.571 130.286 6.857z"
-                  ></path>
-                </svg>
+                <div class="home-buttons"></div>
               </div>
             </div>
           </div>
-          <span class="home-text11">VIOLINIST</span>
+          <span class="home-text03">VIOLINIST</span>
         </header>
         <header data-role="Header" class="home-header">
           <div class="home-container02">
-            <h1 class="home-text12">ALEXANDRA MERBECKS</h1>
+            <h1 class="home-text04">ALEXANDRA MERBECKS</h1>
             <div class="home-nav1">
               <nav
                 class="navigation-links-nav navigation-links-root-class-name17"
@@ -138,7 +115,7 @@
               </nav>
             </div>
             <div data-role="BurgerMenu" class="home-burger-menu1">
-              <svg viewBox="0 0 1024 1024" class="home-icon10">
+              <svg viewBox="0 0 1024 1024" class="home-icon04">
                 <path
                   d="M128 554.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667zM128 298.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667zM128 810.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667z"
                 ></path>
@@ -156,7 +133,7 @@
                     data-role="CloseMobileMenu"
                     class="home-close-mobile-menu"
                   >
-                    <svg viewBox="0 0 1024 1024" class="home-icon12">
+                    <svg viewBox="0 0 1024 1024" class="home-icon06">
                       <path
                         d="M810 274l-238 238 238 238-60 60-238-238-238 238-60-60 238-238-238-238 60-60 238 238 238-238z"
                       ></path>
@@ -181,15 +158,15 @@
                 </nav>
               </div>
               <div>
-                <svg viewBox="0 0 950.8571428571428 1024" class="home-icon14">
+                <svg viewBox="0 0 950.8571428571428 1024" class="home-icon08">
                   <path
                     d="M925.714 233.143c-25.143 36.571-56.571 69.143-92.571 95.429 0.571 8 0.571 16 0.571 24 0 244-185.714 525.143-525.143 525.143-104.571 0-201.714-30.286-283.429-82.857 14.857 1.714 29.143 2.286 44.571 2.286 86.286 0 165.714-29.143 229.143-78.857-81.143-1.714-149.143-54.857-172.571-128 11.429 1.714 22.857 2.857 34.857 2.857 16.571 0 33.143-2.286 48.571-6.286-84.571-17.143-148-91.429-148-181.143v-2.286c24.571 13.714 53.143 22.286 83.429 23.429-49.714-33.143-82.286-89.714-82.286-153.714 0-34.286 9.143-65.714 25.143-93.143 90.857 112 227.429 185.143 380.571 193.143-2.857-13.714-4.571-28-4.571-42.286 0-101.714 82.286-184.571 184.571-184.571 53.143 0 101.143 22.286 134.857 58.286 41.714-8 81.714-23.429 117.143-44.571-13.714 42.857-42.857 78.857-81.143 101.714 37.143-4 73.143-14.286 106.286-28.571z"
                   ></path></svg
-                ><svg viewBox="0 0 877.7142857142857 1024" class="home-icon16">
+                ><svg viewBox="0 0 877.7142857142857 1024" class="home-icon10">
                   <path
                     d="M585.143 512c0-80.571-65.714-146.286-146.286-146.286s-146.286 65.714-146.286 146.286 65.714 146.286 146.286 146.286 146.286-65.714 146.286-146.286zM664 512c0 124.571-100.571 225.143-225.143 225.143s-225.143-100.571-225.143-225.143 100.571-225.143 225.143-225.143 225.143 100.571 225.143 225.143zM725.714 277.714c0 29.143-23.429 52.571-52.571 52.571s-52.571-23.429-52.571-52.571 23.429-52.571 52.571-52.571 52.571 23.429 52.571 52.571zM438.857 152c-64 0-201.143-5.143-258.857 17.714-20 8-34.857 17.714-50.286 33.143s-25.143 30.286-33.143 50.286c-22.857 57.714-17.714 194.857-17.714 258.857s-5.143 201.143 17.714 258.857c8 20 17.714 34.857 33.143 50.286s30.286 25.143 50.286 33.143c57.714 22.857 194.857 17.714 258.857 17.714s201.143 5.143 258.857-17.714c20-8 34.857-17.714 50.286-33.143s25.143-30.286 33.143-50.286c22.857-57.714 17.714-194.857 17.714-258.857s5.143-201.143-17.714-258.857c-8-20-17.714-34.857-33.143-50.286s-30.286-25.143-50.286-33.143c-57.714-22.857-194.857-17.714-258.857-17.714zM877.714 512c0 60.571 0.571 120.571-2.857 181.143-3.429 70.286-19.429 132.571-70.857 184s-113.714 67.429-184 70.857c-60.571 3.429-120.571 2.857-181.143 2.857s-120.571 0.571-181.143-2.857c-70.286-3.429-132.571-19.429-184-70.857s-67.429-113.714-70.857-184c-3.429-60.571-2.857-120.571-2.857-181.143s-0.571-120.571 2.857-181.143c3.429-70.286 19.429-132.571 70.857-184s113.714-67.429 184-70.857c60.571-3.429 120.571-2.857 181.143-2.857s120.571-0.571 181.143 2.857c70.286 3.429 132.571 19.429 184 70.857s67.429 113.714 70.857 184c3.429 60.571 2.857 120.571 2.857 181.143z"
                   ></path></svg
-                ><svg viewBox="0 0 602.2582857142856 1024" class="home-icon18">
+                ><svg viewBox="0 0 602.2582857142856 1024" class="home-icon12">
                   <path
                     d="M548 6.857v150.857h-89.714c-70.286 0-83.429 33.714-83.429 82.286v108h167.429l-22.286 169.143h-145.143v433.714h-174.857v-433.714h-145.714v-169.143h145.714v-124.571c0-144.571 88.571-223.429 217.714-223.429 61.714 0 114.857 4.571 130.286 6.857z"
                   ></path>
@@ -197,12 +174,12 @@
               </div>
             </div>
           </div>
-          <span class="home-text13">VIOLINIST</span>
+          <span class="home-text05">VIOLINIST</span>
         </header>
         <div id="about" class="home-about">
           <div class="home-container04">
             <div class="home-container05">
-              <span class="home-text14">
+              <span class="home-text06">
                 <span>
                   Scottish violinist, Alexandra Merbecks, graduated from the
                   Royal Conservatoire of Scotland with a Master of Arts in
@@ -244,8 +221,8 @@
               class="home-image2"
             />
             <div class="home-container07">
-              <h1 class="home-text22">TEACHING</h1>
-              <span class="home-text23">
+              <h1 class="home-text14">TEACHING</h1>
+              <span class="home-text15">
                 <span>
                   Alexandra is a dedicated and attentive educator, with over
                   five years of violin instrumental and coaching experience in
@@ -265,7 +242,7 @@
                   href="https://colourstrings.org/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link"
+                  class="home-link08"
                 >
                   Colourstrings
                 </a>
@@ -276,7 +253,7 @@
                   href="https://www.kodaly.org.uk/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link1"
+                  class="home-link09"
                 >
                   Kodály
                 </a>
@@ -287,7 +264,7 @@
                   href="https://www.benedettifoundation.org/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link2"
+                  class="home-link10"
                 >
                   Benedetti Foundation
                 </a>
@@ -302,7 +279,7 @@
                   href="https://artsmed.org/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link3"
+                  class="home-link11"
                 >
                   Performing Arts Medicine Association
                 </a>
@@ -413,81 +390,6 @@
             </div>
           </div>
         </div>
-        <header data-role="Header" class="home-header1"></header>
-        <header data-role="Header" class="home-header2">
-          <img
-            alt="logo"
-            src="https://presentation-website-assets.teleporthq.io/logos/logo.png"
-            class="home-image4"
-          />
-          <div class="home-nav3">
-            <nav
-              class="navigation-links3-nav navigation-links3-root-class-name17"
-            >
-              <span class="navigation-links3-text"><span>About</span></span>
-              <span class="navigation-links3-text1"><span>Features</span></span>
-              <span class="navigation-links3-text2"><span>Pricing</span></span>
-              <span class="navigation-links3-text3"><span>Team</span></span>
-              <span class="navigation-links3-text4"><span>Blog</span></span>
-            </nav>
-          </div>
-          <div data-role="BurgerMenu" class="home-burger-menu2">
-            <svg viewBox="0 0 1024 1024" class="home-icon20">
-              <path
-                d="M128 554.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667zM128 298.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667zM128 810.667h768c23.552 0 42.667-19.115 42.667-42.667s-19.115-42.667-42.667-42.667h-768c-23.552 0-42.667 19.115-42.667 42.667s19.115 42.667 42.667 42.667z"
-              ></path>
-            </svg>
-          </div>
-          <div data-role="MobileMenu" class="home-mobile-menu2">
-            <div class="home-nav4">
-              <div class="home-container11">
-                <img
-                  alt="image"
-                  src="https://presentation-website-assets.teleporthq.io/logos/logo.png"
-                  class="home-image5"
-                />
-                <div
-                  data-role="CloseMobileMenu"
-                  class="home-close-mobile-menu1"
-                >
-                  <svg viewBox="0 0 1024 1024" class="home-icon22">
-                    <path
-                      d="M810 274l-238 238 238 238-60 60-238-238-238 238-60-60 238-238-238-238 60-60 238 238 238-238z"
-                    ></path>
-                  </svg>
-                </div>
-              </div>
-              <nav
-                class="navigation-links3-nav navigation-links3-root-class-name18"
-              >
-                <span class="navigation-links3-text"><span>About</span></span>
-                <span class="navigation-links3-text1">
-                  <span>Features</span>
-                </span>
-                <span class="navigation-links3-text2">
-                  <span>Pricing</span>
-                </span>
-                <span class="navigation-links3-text3"><span>Team</span></span>
-                <span class="navigation-links3-text4"><span>Blog</span></span>
-              </nav>
-            </div>
-            <div>
-              <svg viewBox="0 0 950.8571428571428 1024" class="home-icon24">
-                <path
-                  d="M925.714 233.143c-25.143 36.571-56.571 69.143-92.571 95.429 0.571 8 0.571 16 0.571 24 0 244-185.714 525.143-525.143 525.143-104.571 0-201.714-30.286-283.429-82.857 14.857 1.714 29.143 2.286 44.571 2.286 86.286 0 165.714-29.143 229.143-78.857-81.143-1.714-149.143-54.857-172.571-128 11.429 1.714 22.857 2.857 34.857 2.857 16.571 0 33.143-2.286 48.571-6.286-84.571-17.143-148-91.429-148-181.143v-2.286c24.571 13.714 53.143 22.286 83.429 23.429-49.714-33.143-82.286-89.714-82.286-153.714 0-34.286 9.143-65.714 25.143-93.143 90.857 112 227.429 185.143 380.571 193.143-2.857-13.714-4.571-28-4.571-42.286 0-101.714 82.286-184.571 184.571-184.571 53.143 0 101.143 22.286 134.857 58.286 41.714-8 81.714-23.429 117.143-44.571-13.714 42.857-42.857 78.857-81.143 101.714 37.143-4 73.143-14.286 106.286-28.571z"
-                ></path></svg
-              ><svg viewBox="0 0 877.7142857142857 1024" class="home-icon26">
-                <path
-                  d="M585.143 512c0-80.571-65.714-146.286-146.286-146.286s-146.286 65.714-146.286 146.286 65.714 146.286 146.286 146.286 146.286-65.714 146.286-146.286zM664 512c0 124.571-100.571 225.143-225.143 225.143s-225.143-100.571-225.143-225.143 100.571-225.143 225.143-225.143 225.143 100.571 225.143 225.143zM725.714 277.714c0 29.143-23.429 52.571-52.571 52.571s-52.571-23.429-52.571-52.571 23.429-52.571 52.571-52.571 52.571 23.429 52.571 52.571zM438.857 152c-64 0-201.143-5.143-258.857 17.714-20 8-34.857 17.714-50.286 33.143s-25.143 30.286-33.143 50.286c-22.857 57.714-17.714 194.857-17.714 258.857s-5.143 201.143 17.714 258.857c8 20 17.714 34.857 33.143 50.286s30.286 25.143 50.286 33.143c57.714 22.857 194.857 17.714 258.857 17.714s201.143 5.143 258.857-17.714c20-8 34.857-17.714 50.286-33.143s25.143-30.286 33.143-50.286c22.857-57.714 17.714-194.857 17.714-258.857s5.143-201.143-17.714-258.857c-8-20-17.714-34.857-33.143-50.286s-30.286-25.143-50.286-33.143c-57.714-22.857-194.857-17.714-258.857-17.714zM877.714 512c0 60.571 0.571 120.571-2.857 181.143-3.429 70.286-19.429 132.571-70.857 184s-113.714 67.429-184 70.857c-60.571 3.429-120.571 2.857-181.143 2.857s-120.571 0.571-181.143-2.857c-70.286-3.429-132.571-19.429-184-70.857s-67.429-113.714-70.857-184c-3.429-60.571-2.857-120.571-2.857-181.143s-0.571-120.571 2.857-181.143c3.429-70.286 19.429-132.571 70.857-184s113.714-67.429 184-70.857c60.571-3.429 120.571-2.857 181.143-2.857s120.571-0.571 181.143 2.857c70.286 3.429 132.571 19.429 184 70.857s67.429 113.714 70.857 184c3.429 60.571 2.857 120.571 2.857 181.143z"
-                ></path></svg
-              ><svg viewBox="0 0 602.2582857142856 1024" class="home-icon28">
-                <path
-                  d="M548 6.857v150.857h-89.714c-70.286 0-83.429 33.714-83.429 82.286v108h167.429l-22.286 169.143h-145.143v433.714h-174.857v-433.714h-145.714v-169.143h145.714v-124.571c0-144.571 88.571-223.429 217.714-223.429 61.714 0 114.857 4.571 130.286 6.857z"
-                ></path>
-              </svg>
-            </div>
-          </div>
-        </header>
       </div>
     </div>
     <script
