Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -209,9 +209,15 @@
           <div class="home-container6">
             <div class="home-container7">
               <h1 class="home-heading">Contact</h1>
-              <form class="home-form">
+              <form
+                action="https://formsubmit.co/d2d7e122f30bea4373ec550ea8da1563 "
+                method="POST"
+                enctype="application/x-www-form-urlencoded"
+                class="home-form"
+              >
                 <input
                   type="text"
+                  name="name"
                   required=""
                   placeholder="Full Name"
                   autocomplete="name"
@@ -219,6 +225,7 @@
                 />
                 <input
                   type="text"
+                  name="email"
                   required=""
                   placeholder="Email"
                   class="home-textinput1 input"
@@ -226,14 +233,15 @@
                 <input
                   type="text"
                   required=""
-                  placeholder="Telephone Number"
+                  placeholder="telephone"
                   class="home-textinput2 input"
                 />
                 <textarea
+                  name="message"
                   placeholder="Type your message here"
                   class="home-textarea textarea"
                 ></textarea>
-                <button type="button" class="home-button button">Submit</button>
+                <button type="submit" class="home-button button">Submit</button>
               </form>
             </div>
             <img
