Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="home-container7">
               <h1 class="home-heading">Contact</h1>
               <form
-                action="https://formsubmit.co/d2d7e122f30bea4373ec550ea8da1563 "
+                action="https://formsubmit.co/alexandra.merbecks@gmail.com"
                 method="POST"
                 enctype="application/x-www-form-urlencoded"
                 class="home-form"
