Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
             <h1 class="home-text">ALEXANDRA MERBECKS</h1>
             <div data-thq="thq-navbar-nav" class="home-desktop-menu">
               <nav class="home-links">
-                <a href="#about" class="home-link">About</a>
+                <a href="#about" class="home-link">HOME</a>
                 <a href="#teaching" class="home-link01">Teaching</a>
                 <a href="#contact" class="home-link02">Contact</a>
-                <a href="#gallery" class="home-link03">Gallery</a>
               </nav>
             </div>
             <div data-thq="thq-burger-menu" class="home-burger-menu">
@@ -82,10 +81,9 @@
                 </div>
                 <span class="home-text02">VIOLINIST</span>
                 <nav class="home-links1">
-                  <a href="#about" class="home-link04">About</a>
-                  <a href="#teaching" class="home-link05">TEACHING</a>
-                  <a href="#contact" class="home-link06">CONTACT</a>
-                  <a href="#gallery" class="home-link07">GaLLERY</a>
+                  <a href="#about" class="home-link03">HOME</a>
+                  <a href="#teaching" class="home-link04">TEACHING</a>
+                  <a href="#contact" class="home-link05">CONTACT</a>
                 </nav>
                 <div class="home-buttons"></div>
               </div>
@@ -159,7 +157,7 @@
                   href="https://colourstrings.org/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link08"
+                  class="home-link06"
                 >
                   Colourstrings
                 </a>
@@ -170,7 +168,7 @@
                   href="https://www.kodaly.org.uk/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link09"
+                  class="home-link07"
                 >
                   Kodály
                 </a>
@@ -181,7 +179,7 @@
                   href="https://www.benedettifoundation.org/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link10"
+                  class="home-link08"
                 >
                   Benedetti Foundation
                 </a>
@@ -196,7 +194,7 @@
                   href="https://artsmed.org/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link11"
+                  class="home-link09"
                 >
                   Performing Arts Medicine Association
                 </a>
@@ -249,70 +247,6 @@
               src="public/external/flipped-300w.png"
               class="home-image2"
             />
-          </div>
-        </div>
-        <div id="gallery" class="home-gallery">
-          <div class="home-container8">
-            <div
-              class="gallery-card31-gallery-card gallery-card31-root-class-name"
-            >
-              <img
-                alt="image"
-                src="public/external/recital-1500h.png"
-                class="gallery-card31-image"
-              />
-              <div class="gallery-card31-container"></div>
-            </div>
-            <div
-              class="gallery-card31-gallery-card gallery-card31-root-class-name1"
-            >
-              <img
-                alt="image"
-                src="public/external/recital%20bow-1500h.png"
-                class="gallery-card31-image"
-              />
-              <div class="gallery-card31-container"></div>
-            </div>
-            <div
-              class="gallery-card31-gallery-card gallery-card31-root-class-name3"
-            >
-              <img
-                alt="image"
-                src="public/external/quartet-1500h.png"
-                class="gallery-card31-image"
-              />
-              <div class="gallery-card31-container"></div>
-            </div>
-            <div
-              class="gallery-card31-gallery-card gallery-card31-root-class-name2"
-            >
-              <img
-                alt="image"
-                src="https://images.unsplash.com/photo-1531829039722-d3fb3e705a4b?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDE4fHxtaW5pbWFsaXNtJTIwaG9tZXxlbnwwfHx8fDE2MjY0NDg1Mjc&amp;ixlib=rb-1.2.1&amp;h=1000"
-                class="gallery-card31-image"
-              />
-              <div class="gallery-card31-container"></div>
-            </div>
-            <div
-              class="gallery-card31-gallery-card gallery-card31-root-class-name4"
-            >
-              <img
-                alt="image"
-                src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDExfHxtaW5pbWFsaXNtfGVufDB8fHx8MTYyNjQ0NTY1Nw&amp;ixlib=rb-1.2.1&amp;h=1000"
-                class="gallery-card31-image"
-              />
-              <div class="gallery-card31-container"></div>
-            </div>
-            <div
-              class="gallery-card31-gallery-card gallery-card31-root-class-name5"
-            >
-              <img
-                alt="image"
-                src="https://images.unsplash.com/photo-1494438639946-1ebd1d20bf85?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDJ8fG1pbmltYWxpc218ZW58MHx8fHwxNjI2NDQ1NjU3&amp;ixlib=rb-1.2.1&amp;h=1000"
-                class="gallery-card31-image"
-              />
-              <div class="gallery-card31-container"></div>
-            </div>
           </div>
         </div>
       </div>
