Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
 
       <div class="home-container">
         <header data-thq="thq-navbar" class="home-navbar-interactive">
-          <div class="home-container1">
+          <div class="home-container01">
             <h1 class="home-text">ALEXANDRA MERBECKS</h1>
             <div data-thq="thq-navbar-nav" class="home-desktop-menu">
               <nav class="home-links">
-                <a href="#about" class="home-link">HOME</a>
+                <a href="#home" class="home-link">HOME</a>
                 <a href="#teaching" class="home-link01">Teaching</a>
                 <a href="#contact" class="home-link02">Contact</a>
+                <a href="#gallery" class="home-link03">Gallery</a>
               </nav>
             </div>
             <div data-thq="thq-burger-menu" class="home-burger-menu">
@@ -81,9 +82,10 @@
                 </div>
                 <span class="home-text02">VIOLINIST</span>
                 <nav class="home-links1">
-                  <a href="#about" class="home-link03">HOME</a>
-                  <a href="#teaching" class="home-link04">TEACHING</a>
-                  <a href="#contact" class="home-link05">CONTACT</a>
+                  <a href="#home" class="home-link04">HOME</a>
+                  <a href="#teaching" class="home-link05">TEACHING</a>
+                  <a href="#contact" class="home-link06">CONTACT</a>
+                  <a href="#contact" class="home-link07">GALLERY</a>
                 </nav>
                 <div class="home-buttons"></div>
               </div>
@@ -91,51 +93,57 @@
           </div>
           <span class="home-text03">VIOLINIST</span>
         </header>
-        <div id="about" class="home-about">
-          <div class="home-container2">
-            <div class="home-container3">
-              <span class="home-text04">
-                <span>
-                  Scottish violinist, Alexandra Merbecks, graduated from the
-                  Royal Conservatoire of Scotland with a Master of Arts in
-                  Violin Performance. Now based in Milan, Alexandra is
-                  developing an international career.
+        <div id="home" class="home-home">
+          <div class="home-container02">
+            <div class="home-container03">
+              <div class="home-container04">
+                <span class="home-text04">
+                  <span>
+                    Scottish violinist, Alexandra Merbecks, graduated from the
+                    Royal Conservatoire of Scotland with a Master of Arts in
+                    Violin Performance. Now based in Milan, Alexandra is
+                    developing an international career.
+                  </span>
+                  <br />
+                  <br />
+                  <span>
+                    As a soloist, Alexandra has performed the Bruch Violin
+                    Concerto with the Edrom Casals Ensemble and Mozart Violin
+                    Concerto No.3 with the Edinburgh Napier Chamber Orchestra.
+                    Alexandra has given many notable recitals, including an
+                    evening of salon music at the Scottish Arts Club.
+                  </span>
+                  <br />
+                  <br />
+                  <span>
+                    Chamber music highlights include a tour to The Netherlands
+                    with the Forth Trio, with one performance recorded live on
+                    local television. The ensemble also appeared at the
+                    Edinburgh International Festival. Alexandra was awarded
+                    Finalist in the Edinburgh Quartet Apprentice Competition.
+                  </span>
                 </span>
-                <br />
-                <br />
-                <span>
-                  As a soloist, Alexandra has performed the Bruch Violin
-                  Concerto with the Edrom Casals Ensemble and Mozart Violin
-                  Concerto No.3 with the Edinburgh Napier Chamber Orchestra.
-                  Alexandra has given many notable recitals, including an
-                  evening of salon music at the Scottish Arts Club.
-                </span>
-                <br />
-                <br />
-                <span>
-                  Chamber music highlights include a tour to The Netherlands
-                  with the Forth Trio, with one performance recorded live on
-                  local television. The ensemble also appeared at the Edinburgh
-                  International Festival. Alexandra was awarded Finalist in the
-                  Edinburgh Quartet Apprentice Competition.
-                </span>
-              </span>
+              </div>
             </div>
-            <img
-              alt="image"
-              src="public/external/about-600w.png"
-              class="home-image"
-            />
+            <div class="home-container05">
+              <img
+                alt="image"
+                src="public/external/about-600w.png"
+                class="home-image"
+              />
+            </div>
           </div>
         </div>
         <div id="teaching" class="home-teaching">
-          <div class="home-container4">
-            <img
-              alt="image"
-              src="public/external/teaching-600w.png"
-              class="home-image1"
-            />
-            <div class="home-container5">
+          <div class="home-container06">
+            <div class="home-container07">
+              <img
+                alt="image"
+                src="public/external/teaching-600w.png"
+                class="home-image1"
+              />
+            </div>
+            <div class="home-container08">
               <h1 class="home-text12">TEACHING</h1>
               <span class="home-text13">
                 <span>
@@ -157,18 +165,18 @@
                   href="https://colourstrings.org/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link06"
+                  class="home-link08"
                 >
                   Colourstrings
                 </a>
                 <span>
-                  Violin instructor, has experience in teaching with the
+                  &nbsp;Violin instructor, has experience in teaching with the
                 </span>
                 <a
                   href="https://www.kodaly.org.uk/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link07"
+                  class="home-link09"
                 >
                   Kodály
                 </a>
@@ -179,7 +187,7 @@
                   href="https://www.benedettifoundation.org/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link08"
+                  class="home-link10"
                 >
                   Benedetti Foundation
                 </a>
@@ -194,7 +202,7 @@
                   href="https://artsmed.org/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="home-link09"
+                  class="home-link11"
                 >
                   Performing Arts Medicine Association
                 </a>
@@ -204,51 +212,108 @@
           </div>
         </div>
         <div id="contact" class="home-contact">
-          <div class="home-container6">
-            <div class="home-container7">
-              <h1 class="home-heading">Contact</h1>
-              <form
-                action="https://formsubmit.co/alexandra.merbecks@gmail.com"
-                method="POST"
-                enctype="application/x-www-form-urlencoded"
-                class="home-form"
-              >
-                <input
-                  type="text"
-                  name="name"
-                  required=""
-                  placeholder="Full Name"
-                  autocomplete="name"
-                  class="home-textinput input"
-                />
-                <input
-                  type="text"
-                  name="email"
-                  required=""
-                  placeholder="Email"
-                  class="home-textinput1 input"
-                />
-                <input
-                  type="text"
-                  required=""
-                  placeholder="telephone"
-                  class="home-textinput2 input"
-                />
-                <textarea
-                  name="message"
-                  placeholder="Type your message here"
-                  class="home-textarea textarea"
-                ></textarea>
-                <button type="submit" class="home-button button">Submit</button>
-              </form>
+          <div class="home-container09">
+            <div class="home-container10">
+              <div class="home-container11">
+                <h1 class="home-heading">Contact</h1>
+                <form
+                  action="https://formsubmit.co/alexandra.merbecks@gmail.com"
+                  method="POST"
+                  enctype="application/x-www-form-urlencoded"
+                  class="home-form"
+                >
+                  <input
+                    type="text"
+                    name="name"
+                    required=""
+                    placeholder="Full Name"
+                    autocomplete="name"
+                    class="home-textinput input"
+                  />
+                  <input
+                    type="text"
+                    name="email"
+                    required=""
+                    placeholder="Email"
+                    class="home-textinput1 input"
+                  />
+                  <input
+                    type="text"
+                    required=""
+                    placeholder="telephone"
+                    class="home-textinput2 input"
+                  />
+                  <textarea
+                    name="message"
+                    placeholder="Type your message here"
+                    class="home-textarea textarea"
+                  ></textarea>
+                  <button type="submit" class="home-button button">
+                    Submit
+                  </button>
+                </form>
+              </div>
             </div>
-            <img
-              alt="image"
-              src="public/external/flipped-300w.png"
-              class="home-image2"
-            />
+            <div class="home-container12">
+              <img
+                alt="image"
+                src="public/external/flipped-600h.png"
+                class="home-image2"
+              />
+            </div>
           </div>
         </div>
+        <div id="gallery" class="home-gallery">
+          <div class="home-container13">
+            <h1 class="home-heading1">Gallery</h1>
+            <div class="home-container14">
+              <div class="home-container15">
+                <img
+                  alt="image"
+                  src="public/external/recital%20bow-400w.png"
+                  class="home-image3"
+                />
+              </div>
+              <div class="home-container16">
+                <img
+                  alt="image"
+                  src="public/external/quartet-400h.png"
+                  class="home-image4"
+                />
+              </div>
+              <div class="home-container17">
+                <img
+                  alt="image"
+                  src="public/external/recital-400w.png"
+                  class="home-image5"
+                />
+              </div>
+              <div class="home-container18">
+                <img
+                  alt="image"
+                  src="public/external/recital-400h.jpg"
+                  class="home-image6"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer id="footer" class="home-footer">
+          <div class="home-container19">
+            <nav class="home-nav1">
+              <a href="#home" class="home-link12">HOME</a>
+              <a href="#teaching" class="home-link13">TEACHING</a>
+              <a href="#contact" class="home-link14">CONTACT</a>
+              <a href="#gallery" class="home-link15">GALLERY</a>
+            </nav>
+          </div>
+          <div class="home-separator"></div>
+          <div class="home-container20">
+            <span class="home-text25">
+              © 2023 Alexandra Merbecks, All Rights Reserved.
+            </span>
+          </div>
+        </footer>
       </div>
     </div>
     <script
