Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <a href="#home" class="home-link04">HOME</a>
                   <a href="#teaching" class="home-link05">TEACHING</a>
                   <a href="#contact" class="home-link06">CONTACT</a>
-                  <a href="#contact" class="home-link07">GALLERY</a>
+                  <a href="#gallery" class="home-link07">GALLERY</a>
                 </nav>
                 <div class="home-buttons"></div>
               </div>
@@ -139,82 +139,84 @@
             <div class="home-container07">
               <img
                 alt="image"
-                src="public/external/teaching-600w.png"
+                src="public/external/teaching-500h.png"
                 class="home-image1"
               />
             </div>
             <div class="home-container08">
-              <h1 class="home-text12">TEACHING</h1>
-              <span class="home-text13">
-                <span>
-                  Alexandra is a dedicated and attentive educator, with over
-                  five years of violin instrumental and coaching experience in
-                  both individual and group settings. With an imaginative and
-                  intelligent approach to teaching, Alexandra ensures that every
-                  child develops a solid technical foundation all the while
-                  fostering a fun and exploratory relationship with their
-                  violin.
+              <div class="home-container09">
+                <h1 class="home-text12">TEACHING</h1>
+                <span class="home-text13">
+                  <span>
+                    Alexandra is a dedicated and attentive educator, with over
+                    five years of violin instrumental and coaching experience in
+                    both individual and group settings. With an imaginative and
+                    intelligent approach to teaching, Alexandra ensures that
+                    every child develops a solid technical foundation all the
+                    while fostering a fun and exploratory relationship with
+                    their violin.
+                  </span>
+                  <br />
+                  <br />
+                  <span>
+                    Alexandra enjoys developing her teaching skills to adapt the
+                    teaching method to suit the student. She is a qualified
+                  </span>
+                  <a
+                    href="https://colourstrings.org/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    class="home-link08"
+                  >
+                    Colourstrings
+                  </a>
+                  <span>
+                    &nbsp;Violin instructor, has experience in teaching with the
+                  </span>
+                  <a
+                    href="https://www.kodaly.org.uk/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    class="home-link09"
+                  >
+                    Kodály
+                  </a>
+                  <span>
+                    method and is currently an Instrumental Ambassador for the
+                  </span>
+                  <a
+                    href="https://www.benedettifoundation.org/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    class="home-link10"
+                  >
+                    Benedetti Foundation
+                  </a>
+                  <span>.</span>
+                  <br />
+                  <br />
+                  <span>
+                    Alexandra holds a certificate in the Essentials of
+                    Performing Arts Medicine (Arts Educator) from the
+                  </span>
+                  <a
+                    href="https://artsmed.org/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    class="home-link11"
+                  >
+                    Performing Arts Medicine Association
+                  </a>
+                  <span>.</span>
                 </span>
-                <br />
-                <br />
-                <span>
-                  Alexandra enjoys developing her teaching skills to adapt the
-                  teaching method to suit the student. She is a qualified
-                </span>
-                <a
-                  href="https://colourstrings.org/"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  class="home-link08"
-                >
-                  Colourstrings
-                </a>
-                <span>
-                  &nbsp;Violin instructor, has experience in teaching with the
-                </span>
-                <a
-                  href="https://www.kodaly.org.uk/"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  class="home-link09"
-                >
-                  Kodály
-                </a>
-                <span>
-                  method and is currently an Instrumental Ambassador for the
-                </span>
-                <a
-                  href="https://www.benedettifoundation.org/"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  class="home-link10"
-                >
-                  Benedetti Foundation
-                </a>
-                <span>.</span>
-                <br />
-                <br />
-                <span>
-                  Alexandra holds a certificate in the Essentials of Performing
-                  Arts Medicine (Arts Educator) from the
-                </span>
-                <a
-                  href="https://artsmed.org/"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  class="home-link11"
-                >
-                  Performing Arts Medicine Association
-                </a>
-                <span>.</span>
-              </span>
+              </div>
             </div>
           </div>
         </div>
         <div id="contact" class="home-contact">
-          <div class="home-container09">
-            <div class="home-container10">
-              <div class="home-container11">
+          <div class="home-container10">
+            <div class="home-container11">
+              <div class="home-container12">
                 <h1 class="home-heading">Contact</h1>
                 <form
                   action="https://formsubmit.co/alexandra.merbecks@gmail.com"
@@ -254,7 +256,7 @@
                 </form>
               </div>
             </div>
-            <div class="home-container12">
+            <div class="home-container13">
               <img
                 alt="image"
                 src="public/external/flipped-600h.png"
@@ -264,31 +266,31 @@
           </div>
         </div>
         <div id="gallery" class="home-gallery">
-          <div class="home-container13">
+          <div class="home-container14">
             <h1 class="home-heading1">Gallery</h1>
-            <div class="home-container14">
-              <div class="home-container15">
+            <div class="home-container15">
+              <div class="home-container16">
                 <img
                   alt="image"
                   src="public/external/recital%20bow-400w.png"
                   class="home-image3"
                 />
               </div>
-              <div class="home-container16">
+              <div class="home-container17">
                 <img
                   alt="image"
                   src="public/external/quartet-400h.png"
                   class="home-image4"
                 />
               </div>
-              <div class="home-container17">
+              <div class="home-container18">
                 <img
                   alt="image"
                   src="public/external/recital-400w.png"
                   class="home-image5"
                 />
               </div>
-              <div class="home-container18">
+              <div class="home-container19">
                 <img
                   alt="image"
                   src="public/external/recital-400h.jpg"
@@ -299,7 +301,7 @@
           </div>
         </div>
         <footer id="footer" class="home-footer">
-          <div class="home-container19">
+          <div class="home-container20">
             <nav class="home-nav1">
               <a href="#home" class="home-link12">HOME</a>
               <a href="#teaching" class="home-link13">TEACHING</a>
@@ -308,7 +310,7 @@
             </nav>
           </div>
           <div class="home-separator"></div>
-          <div class="home-container20">
+          <div class="home-container21">
             <span class="home-text25">
               © 2023 Alexandra Merbecks, All Rights Reserved.
             </span>
