Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </header>
         <div id="home" class="home-home">
           <div class="home-container02">
-            <div class="home-container03">
-              <div class="home-container04">
+            <div class="home-text-container">
+              <div class="home-container03">
                 <span class="home-text04">
                   <span>
                     Scottish violinist, Alexandra Merbecks, graduated from the
@@ -125,7 +125,7 @@
                 </span>
               </div>
             </div>
-            <div class="home-container05">
+            <div class="home-image-container">
               <img
                 alt="image"
                 src="public/external/about-600w.png"
@@ -135,16 +135,16 @@
           </div>
         </div>
         <div id="teaching" class="home-teaching">
-          <div class="home-container06">
-            <div class="home-container07">
+          <div class="home-container04">
+            <div class="home-image-container1">
               <img
                 alt="image"
                 src="public/external/teaching-500h.png"
                 class="home-image1"
               />
             </div>
-            <div class="home-container08">
-              <div class="home-container09">
+            <div class="home-text-container1">
+              <div class="home-container05">
                 <h1 class="home-text12">TEACHING</h1>
                 <span class="home-text13">
                   <span>
@@ -214,9 +214,9 @@
           </div>
         </div>
         <div id="contact" class="home-contact">
-          <div class="home-container10">
-            <div class="home-container11">
-              <div class="home-container12">
+          <div class="home-container06">
+            <div class="home-container07">
+              <div class="home-container08">
                 <h1 class="home-heading">Contact</h1>
                 <form
                   action="https://formsubmit.co/alexandra.merbecks@gmail.com"
@@ -256,7 +256,7 @@
                 </form>
               </div>
             </div>
-            <div class="home-container13">
+            <div class="home-container09">
               <img
                 alt="image"
                 src="public/external/flipped-600h.png"
@@ -266,31 +266,31 @@
           </div>
         </div>
         <div id="gallery" class="home-gallery">
-          <div class="home-container14">
+          <div class="home-container10">
             <h1 class="home-heading1">Gallery</h1>
-            <div class="home-container15">
-              <div class="home-container16">
+            <div class="home-container11">
+              <div class="home-container12">
                 <img
                   alt="image"
                   src="public/external/recital%20bow-400w.png"
                   class="home-image3"
                 />
               </div>
-              <div class="home-container17">
+              <div class="home-container13">
                 <img
                   alt="image"
                   src="public/external/quartet-400h.png"
                   class="home-image4"
                 />
               </div>
-              <div class="home-container18">
+              <div class="home-container14">
                 <img
                   alt="image"
                   src="public/external/recital-400w.png"
                   class="home-image5"
                 />
               </div>
-              <div class="home-container19">
+              <div class="home-container15">
                 <img
                   alt="image"
                   src="public/external/recital-400h.jpg"
@@ -301,7 +301,7 @@
           </div>
         </div>
         <footer id="footer" class="home-footer">
-          <div class="home-container20">
+          <div class="home-container16">
             <nav class="home-nav1">
               <a href="#home" class="home-link12">HOME</a>
               <a href="#teaching" class="home-link13">TEACHING</a>
@@ -310,7 +310,7 @@
             </nav>
           </div>
           <div class="home-separator"></div>
-          <div class="home-container21">
+          <div class="home-container17">
             <span class="home-text25">
               © 2023 Alexandra Merbecks, All Rights Reserved.
             </span>
